// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ViewToolbarFieldSortButton Component should handle updating the view query through redux state with a component: dispatch type, component 1`] = `
[
  [
    [
      {
        "filter": "ordering",
        "type": "SET_QUERY",
        "value": "hello world",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarFieldSortButton Component should handle updating the view query through redux state with a hook: dispatch type, hook 1`] = `
[
  [
    [
      {
        "filter": "ordering",
        "type": "SET_QUERY",
        "value": "dolor sit",
        "viewId": undefined,
      },
    ],
  ],
]
`;

exports[`ViewToolbarFieldSortButton Component should render a basic component: basic 1`] = `
<Tooltip
  content="t(toolbar.label_tooltip_sort, {"context":"asc"})"
  delayShow={500}
  id={null}
  isPopover={false}
  placement="right"
>
  <Button
    data-test="toolbarSortButton"
    onClick={[Function]}
    ouiaId="toolbar_sort_button"
    variant="plain"
  >
    <SortAmountDownAltIcon
      color="currentColor"
      noVerticalAlign={false}
      size="sm"
    />
  </Button>
</Tooltip>
`;
